# dataset_excel

./: .gitignore  Agents.md  Certas_EID_出向提案_10枚.pptx  README.md  clearml_agent_reprocess.py  memo.md  pyproject.toml  requirements.txt
examples/: clearml_dataset_excel_addin.bas  clearml_dataset_excel_addin.xlam  condition_template.xlsm  condition_template.xlsx  conditions_filled.xlsm  conditions_filled.xlsx  generate_example_files.py  run.yaml
tests/: test_axes_mapping_source_type_dict.py  test_cli_addin_inspect.py  test_cli_addin_install.py  test_cli_addin_unquarantine.py  test_cli_addin_update_uninstall.py  test_cli_agent_reprocess_clone_project_output.py  test_cli_agent_reprocess_fallback_spec.py  test_cli_agent_reprocess_hyperparam_yaml_overrides.py  test_cli_agent_reprocess_integration.py  test_cli_agent_reprocess_no_upload_stage_persists.py  test_cli_agent_reprocess_output_overrides_from_hyperparams.py  test_cli_integration.py  test_cli_payload_validate.py  test_cli_payload_validate_deep.py  test_cli_register_base_excel_preserves_template.py  test_cli_register_execution_script.py  test_cli_register_integration.py  test_cli_run_integration.py  test_cli_run_no_upload_stage_persists.py  test_cli_template_generate_addin.py  test_cli_template_package.py  test_config.py  test_core.py  test_default_vba_project_patch.py  test_format_clearml_upload_dataset.py  test_format_excel.py  test_format_excel_generate_xlam.py  test_format_excel_vba_repair.py  test_format_processor.py  test_format_spec.py  test_stage_dataset_payload_path_map.py  test_vba_addin.py  (+3 more)
(+26 files in other folders)
